# llms-discussions

./: .gitignore  README.md  app.py  config.ini  pyproject.toml  requirements.txt
responses/: 0_response.jsonl  1_response.jsonl  2_response.jsonl  3_response.jsonl  4_response.jsonl  5_response.jsonl  6_response.jsonl
source/: chatgpt.py  config.py  content.py  eval.py  evaluate.py  event.py  gemini.py  manager.py  openrouter.py  perspective.py  room.py  tts.py  utils.py  worker.py
source/api/: gemini.py  router.py
static/: topic.json
static/css/: style.css
static/js/: constants.js  script.js  utils.js
templates/: base.html  home.html  result.html  room.html
