[project]
name = "llms-discussions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "google-api-python-client>=2.177.0",
    "google-cloud-aiplatform>=1.106.0",
    "google-cloud-texttospeech>=2.27.0",
    "openai>=1.98.0",
    "thefuzz>=0.22.1",
]
