[project]
name = "llms-discussions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "google-api-python-client>=2.177.0",
    "google-cloud-texttospeech>=2.27.0",
    "google-genai>=1.29.0",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]
