[project]
name = "llms-discussions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "flask>=3.1.3",
    "flask-socketio>=5.5.1",
    "google-api-python-client>=2.193.0",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.68.0",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
